# advancedfx

./: .gitmodules  CMakeLists.txt
AfxHookSource/: AfxHookSource.vcxproj  AfxHookSource.vcxproj.filters  Gui.cpp  Gui.h  MirvInputMem.h  d3d9Hooks.cpp  main.cpp
AfxHookSource/jsonrpc/: main.cpp  main.h
afx-core/: .gitignore  CMakeLists.txt  Cargo.toml  README.md  afx-core.rc  build.rs
afx-core/src/: main.rs  openrpc.rs
afx-rpc-generator/: CMakeLists.txt  app.js  package-lock.json  package.json
interfaces/c/: AdvancedfxLibrary.h  AdvancedfxPlugin.h  AdvancedfxTypes.h  AdvancedfxUuid.h  test.c
interfaces/openrpc/afx-core/: common.json  injector-win32.json
