[package]
name = "afx-core"
version = "0.1.0"
edition = "2024"
authors = ["advancedfx.org <contact@advancedfx.org>"]
license = "MIT"
homepage = "https://github.com/advancedfx"
repository = "https://github.com/advancedfx/advancedfx"
build = "build.rs"

[dependencies]
arboard = "3.5.0"
clap = { version = "4.5.40", features = ["derive"] }
directories = "6.0.0"
fd-lock = "4.0.4"
getrandom = "0.3.3"
serde = { version =  "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tray-icon = "0.21.0"
tray-item = "0.10.0"
winapi = { version = "0.3.9", features = ["wincon","winuser"] }

[build-dependencies]
embed-resource = "3.0.4"
